# gpt-frameworks

./: .gitignore  README.md
autogen/: pyproject.toml
autogen/magnetic-one/: tutorial.ipynb  tutorial.py
aws-agentcore/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
aws-agentcore/examples/: weather_agent.py
aws-agentcore/tutorial/: quick-start.py
azure/: pyproject.toml
chainlit/: README.md  pyproject.toml
chainlit/app/custom_front/: README.md
chainlit/app/custom_front/back/: app.py  server.py
chainlit/app/custom_front/front/: package.json  vite.config.ts
chainlit/app/custom_front/front/src/: App.tsx  main.tsx
chainlit/app/custom_front/front/src/page/: playground.tsx
common-lib/: pyproject.toml
evaluation/: pyproject.toml
evaluation/promptlayer/: get_start.ipynb
langchain/: pyproject.toml
langchain/plays/practices/: azure-cognitive.ipynb  serp.ipynb
langchain/plays/tasks/: table.ipynb
langchain/python/: .envrc  Dockerfile  README.md  docker-compose.yml  google.ipynb  map.ipynb  pyproject.toml  table.ipynb
langchain/python/handson/agents/: conversation_agent_for_chat_models.py
langchain/python/plays/practices/: langserve.ipynb  serp.ipynb
llama_index/: README.md  Untitled.ipynb  data  pyproject.toml
llama_index/examples/graph/: graph.ipynb
llama_index/playground/integrations/: langfuse.ipynb
llama_index/playground/query_engine/: simple_query.ipynb
llama_index/practice/agents/: basic.ipynb
llama_index/practice/integrations/: langfuse.ipynb  wandb_callback_handler.ipynb
llama_index/practice/loaders/: notion.ipynb
llama_index/practice/query_engine/: simple_query.ipynb
llama_index/usecases/graph/: graph.py  kg.html
r2r/: README.md  pyproject.toml
r2r/client/: client.sh
r2r/client/params/: rag_completion.json  search.json
r2r/server/: app.py
r2r/server/configs/: default.json
raw_data/documents/: README.md
raw_data/documents/interest/mbti/: INFJ.txt  INFP.txt  INTJ.txt  INTP.txt  ISFJ.txt  ISFP.txt  ISTJ.txt  ISTP.txt
