[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
common-lib = { path = "../common-lib", develop=true }
python = ">=3.11,<3.14"
pyautogen = "0.7.0"
autogen-agentchat = "^0.4.0"
autogen-ext = {extras = ["magentic-one", "openai"], version = "^0.4.0"}

