[tool.poetry]
name = "open-interpreter-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
common-lib = { path = "../common-lib", develop=true }
python = "^3.12"
azure-search-documents = "11.6.0b4"
python-dotenv = "^1.0.1"
azure-identity = "^1.18.0"
openai = "^1.51.0"
