[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.334"
openai = "^0.27.4"
jupyterlab = "^3.6.3"
google-search-results = "^2.4.2"
googlemaps = "^4.10.0"
azure-ai-formrecognizer = "^3.2.1"
azure-cognitiveservices-speech = "^1.30.0"
ipykernel = "^6.26.0"
fastapi = "^0.104.1"
langserve = "^0.0.26"
sse-starlette = "^1.6.5"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
