[tool.poetry]
name = "llama-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
common-lib = { path = "../common-lib", develop=true }
python = "^3.12"
llama-index = "^0.11.0"
llama-index-readers-notion = "^0.2.0"
llama-index-readers-web = "^0.2.2"
