[tool.poetry]
name = "r2r-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
common-lib = { path = "../common-lib", develop=true }
python = "^3.11,<3.13"
r2r = {extras = ["all"], git = "https://github.com/SciPhi-AI/R2R.git", branch = "main"}
